--- a/SpaceX_data_collection_api.ipynb
+++ b/SpaceX_data_collection_api.ipynb
@@ -335,21 +335,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lets take a subset of our dataframe keeping only the features we want and the flight number, and date_utc.\n",
+    "#take a subset of dataframe keeping only the features we want and the flight number, and date_utc.\n",
     "data = data[['rocket', 'payloads', 'launchpad', 'cores', 'flight_number', 'date_utc']]\n",
     "\n",
-    "# We will remove rows with multiple cores because those are falcon rockets with 2 extra rocket boosters and rows that have multiple payloads in a single rocket.\n",
+    "#remove rows with multiple cores because those are falcon rockets with 2 extra rocket boosters and rows that have multiple payloads in a single rocket.\n",
     "data = data[data['cores'].map(len)==1]\n",
     "data = data[data['payloads'].map(len)==1]\n",
     "\n",
-    "# Since payloads and cores are lists of size 1 we will also extract the single value in the list and replace the feature.\n",
+    "#since payloads and cores are lists of size 1 we will also extract the single value in the list and replace the feature.\n",
     "data['cores'] = data['cores'].map(lambda x : x[0])\n",
     "data['payloads'] = data['payloads'].map(lambda x : x[0])\n",
     "\n",
-    "# We also want to convert the date_utc to a datetime datatype and then extracting the date leaving the time\n",
+    "#convert the date_utc to a datetime datatype and then extract the date leaving the time\n",
     "data['date'] = pd.to_datetime(data['date_utc']).dt.date\n",
     "\n",
-    "# Using the date we will restrict the dates of the launches\n",
+    "#using the date, restrict the dates of the launches\n",
     "data = data[data['date'] <= datetime.date(2020, 11, 13)]"
    ]
   },
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call getBoosterVersion\n",
+    "#call getBoosterVersion\n",
     "getBoosterVersion(data)"
    ]
   },
@@ -497,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call getLaunchSite\n",
+    "#call getLaunchSite\n",
     "getLaunchSite(data)"
    ]
   },
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call getPayloadData\n",
+    "#call getPayloadData\n",
     "getPayloadData(data)"
    ]
   },
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call getCoreData\n",
+    "#call getCoreData\n",
     "getCoreData(data)"
    ]
   },
