--- a/SpaceX_data_collection_api.ipynb
+++ b/SpaceX_data_collection_api.ipynb
@@ -1159,7 +1159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Wrangling"
+    "## Initial Data Wrangling"
    ]
   },
   {
