--- a/01_SpaceX_data_collection_api.ipynb
+++ b/01_SpaceX_data_collection_api.ipynb
@@ -22,9 +22,9 @@
    "source": [
     "#import required libraries\n",
     "\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "import requests # type: ignore\n",
+    "import pandas as pd # type: ignore\n",
+    "import numpy as np # type: ignore\n",
     "import datetime"
    ]
   },
@@ -1216,7 +1216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rahul\\AppData\\Local\\Temp\\ipykernel_19892\\4023042473.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\Rahul\\AppData\\Local\\Temp\\ipykernel_12968\\4023042473.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
