--- a/01_SpaceX_data_collection_api.ipynb
+++ b/01_SpaceX_data_collection_api.ipynb
@@ -22,9 +22,9 @@
    "source": [
     "#import required libraries\n",
     "\n",
-    "import requests # type: ignore\n",
-    "import pandas as pd # type: ignore\n",
-    "import numpy as np # type: ignore\n",
+    "import requests \n",
+    "import pandas as pd \n",
+    "import numpy as np \n",
     "import datetime"
    ]
   },
