--- a/01_SpaceX_data_collection_api.ipynb
+++ b/01_SpaceX_data_collection_api.ipynb
@@ -1277,7 +1277,7 @@
    "outputs": [],
    "source": [
     "#export as a csv file\n",
-    "data_falcon9.to_csv('dataset_part_api.csv', index=False)"
+    "data_falcon9.to_csv('falcon9_dataset.csv', index=False)"
    ]
   }
  ],
