--- a/02_SpaceX_data_wrangling.ipynb
+++ b/02_SpaceX_data_wrangling.ipynb
@@ -1,5 +1,30 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import required libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load dataset exported from previous notebook\n",
+    "\n",
+    "df=pd.read_csv(\"data\")\n",
+    "df.head(10)"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "myenv_tist",
