--- a/04_SpaceX_feature_engineering.ipynb
+++ b/04_SpaceX_feature_engineering.ipynb
@@ -246,6 +246,7 @@
        "      <th>Block</th>\n",
        "      <th>ReusedCount</th>\n",
        "      <th>Serial</th>\n",
+       "      <th>Class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -263,6 +264,7 @@
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>B0003</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -278,6 +280,7 @@
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>B0005</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -293,6 +296,7 @@
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>B0007</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -308,6 +312,7 @@
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>B1003</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -323,6 +328,7 @@
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>B1004</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -336,12 +342,12 @@
        "3             4   500.000000    PO   VAFB SLC 4E        1     False   False   \n",
        "4             5  3170.000000   GTO  CCSFS SLC 40        1     False   False   \n",
        "\n",
-       "    Legs LandingPad  Block  ReusedCount Serial  \n",
-       "0  False        NaN    1.0            0  B0003  \n",
-       "1  False        NaN    1.0            0  B0005  \n",
-       "2  False        NaN    1.0            0  B0007  \n",
-       "3  False        NaN    1.0            0  B1003  \n",
-       "4  False        NaN    1.0            0  B1004  "
+       "    Legs LandingPad  Block  ReusedCount Serial  Class  \n",
+       "0  False        NaN    1.0            0  B0003      0  \n",
+       "1  False        NaN    1.0            0  B0005      0  \n",
+       "2  False        NaN    1.0            0  B0007      0  \n",
+       "3  False        NaN    1.0            0  B1003      0  \n",
+       "4  False        NaN    1.0            0  B1004      0  "
       ]
      },
      "execution_count": 3,
@@ -351,7 +357,7 @@
    ],
    "source": [
     "# select the required features\n",
-    "features = df[['FlightNumber', 'PayloadMass', 'Orbit', 'LaunchSite', 'Flights', 'GridFins', 'Reused', 'Legs', 'LandingPad', 'Block', 'ReusedCount', 'Serial']]\n",
+    "features = df[['FlightNumber', 'PayloadMass', 'Orbit', 'LaunchSite', 'Flights', 'GridFins', 'Reused', 'Legs', 'LandingPad', 'Block', 'ReusedCount', 'Serial', 'Class']]\n",
     "features.head()"
    ]
   },
@@ -389,8 +395,8 @@
        "      <th>Legs</th>\n",
        "      <th>Block</th>\n",
        "      <th>ReusedCount</th>\n",
+       "      <th>Class</th>\n",
        "      <th>Orbit_ES-L1</th>\n",
-       "      <th>Orbit_GEO</th>\n",
        "      <th>...</th>\n",
        "      <th>Serial_B1048</th>\n",
        "      <th>Serial_B1049</th>\n",
@@ -415,7 +421,7 @@
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -439,7 +445,7 @@
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -463,7 +469,7 @@
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -487,7 +493,7 @@
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -511,7 +517,7 @@
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -527,7 +533,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 80 columns</p>\n",
+       "<p>5 rows × 81 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -538,12 +544,12 @@
        "3             4   500.000000        1     False   False  False    1.0   \n",
        "4             5  3170.000000        1     False   False  False    1.0   \n",
        "\n",
-       "   ReusedCount  Orbit_ES-L1  Orbit_GEO  ...  Serial_B1048  Serial_B1049  \\\n",
-       "0            0        False      False  ...         False         False   \n",
-       "1            0        False      False  ...         False         False   \n",
-       "2            0        False      False  ...         False         False   \n",
-       "3            0        False      False  ...         False         False   \n",
-       "4            0        False      False  ...         False         False   \n",
+       "   ReusedCount  Class  Orbit_ES-L1  ...  Serial_B1048  Serial_B1049  \\\n",
+       "0            0      0        False  ...         False         False   \n",
+       "1            0      0        False  ...         False         False   \n",
+       "2            0      0        False  ...         False         False   \n",
+       "3            0      0        False  ...         False         False   \n",
+       "4            0      0        False  ...         False         False   \n",
        "\n",
        "   Serial_B1050  Serial_B1051  Serial_B1054  Serial_B1056  Serial_B1058  \\\n",
        "0         False         False         False         False         False   \n",
@@ -559,7 +565,7 @@
        "3         False         False         False  \n",
        "4         False         False         False  \n",
        "\n",
-       "[5 rows x 80 columns]"
+       "[5 rows x 81 columns]"
       ]
      },
      "execution_count": 4,
@@ -607,8 +613,8 @@
        "      <th>Legs</th>\n",
        "      <th>Block</th>\n",
        "      <th>ReusedCount</th>\n",
+       "      <th>Class</th>\n",
        "      <th>Orbit_ES-L1</th>\n",
-       "      <th>Orbit_GEO</th>\n",
        "      <th>...</th>\n",
        "      <th>Serial_B1048</th>\n",
        "      <th>Serial_B1049</th>\n",
@@ -777,7 +783,7 @@
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -801,7 +807,7 @@
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -825,7 +831,7 @@
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -849,7 +855,7 @@
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -873,7 +879,7 @@
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -889,7 +895,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>90 rows × 80 columns</p>\n",
+       "<p>90 rows × 81 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -906,18 +912,18 @@
        "88          89.0  15600.000000      3.0       1.0     1.0   1.0    5.0   \n",
        "89          90.0   3681.000000      1.0       1.0     0.0   1.0    5.0   \n",
        "\n",
-       "    ReusedCount  Orbit_ES-L1  Orbit_GEO  ...  Serial_B1048  Serial_B1049  \\\n",
-       "0           0.0          0.0        0.0  ...           0.0           0.0   \n",
-       "1           0.0          0.0        0.0  ...           0.0           0.0   \n",
-       "2           0.0          0.0        0.0  ...           0.0           0.0   \n",
-       "3           0.0          0.0        0.0  ...           0.0           0.0   \n",
-       "4           0.0          0.0        0.0  ...           0.0           0.0   \n",
-       "..          ...          ...        ...  ...           ...           ...   \n",
-       "85         12.0          0.0        0.0  ...           0.0           0.0   \n",
-       "86         13.0          0.0        0.0  ...           0.0           0.0   \n",
-       "87         12.0          0.0        0.0  ...           0.0           0.0   \n",
-       "88         12.0          0.0        0.0  ...           0.0           0.0   \n",
-       "89          8.0          0.0        0.0  ...           0.0           0.0   \n",
+       "    ReusedCount  Class  Orbit_ES-L1  ...  Serial_B1048  Serial_B1049  \\\n",
+       "0           0.0    0.0          0.0  ...           0.0           0.0   \n",
+       "1           0.0    0.0          0.0  ...           0.0           0.0   \n",
+       "2           0.0    0.0          0.0  ...           0.0           0.0   \n",
+       "3           0.0    0.0          0.0  ...           0.0           0.0   \n",
+       "4           0.0    0.0          0.0  ...           0.0           0.0   \n",
+       "..          ...    ...          ...  ...           ...           ...   \n",
+       "85         12.0    1.0          0.0  ...           0.0           0.0   \n",
+       "86         13.0    1.0          0.0  ...           0.0           0.0   \n",
+       "87         12.0    1.0          0.0  ...           0.0           0.0   \n",
+       "88         12.0    1.0          0.0  ...           0.0           0.0   \n",
+       "89          8.0    1.0          0.0  ...           0.0           0.0   \n",
        "\n",
        "    Serial_B1050  Serial_B1051  Serial_B1054  Serial_B1056  Serial_B1058  \\\n",
        "0            0.0           0.0           0.0           0.0           0.0   \n",
@@ -945,7 +951,7 @@
        "88           0.0           1.0           0.0  \n",
        "89           0.0           0.0           1.0  \n",
        "\n",
-       "[90 rows x 80 columns]"
+       "[90 rows x 81 columns]"
       ]
      },
      "execution_count": 5,
